fix image upload text overflow

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,10 @@ textarea {
 	margin-bottom: 10px;
 }
 
+.custom-file-label {
+	overflow: hidden;	
+}
+
 .custom-file-label::after{
 	 background: #007bff;
 	 color: white;
